# okf-kit

./: .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
_docs/: 2026-06-16-okf-plugin-v0.1-design.md
docs/: authoring.md  backlog.md  progressive-context.md  tools.md
docs/rfc/: 0001-enrich-okf-wiki.md  0001-okf-agent-skills-and-installers.md  0002-okf-for-codebases.md  README.md
docs/specs/: README.md
docs/specs/okf-agent-installer/: plan.md  spec.md
docs/specs/okf-code/: plan.md  spec.md
okf-kit/okf_kit/: agent_install.py  cli.py  mcp.py
okf-kit/okf_kit/code/: __init__.py  discovery.py  indexer.py  managed.py  model.py  paths.py  render.py
okf-kit/okf_kit/code/treesitter/: __init__.py  runtime.py
okf-kit/okf_kit/core/: index.py  links.py  search.py
okf-kit/tests/: test_agent_install.py  test_cli.py  test_code_index.py  test_docs.py  test_index.py  test_links.py  test_mcp.py  test_search.py  test_skill.py
wiki/: architecture.md  index.md  okf-format.md
wiki/code/: index.md
wiki/code-summaries/: index.md  repository.md
wiki/code-summaries/areas/: index.md  okf_kit.md
wiki/code/okf_kit/: __init__.py.md  agent_install.py.md  cli.py.md  index.md  mcp.py.md
wiki/code/okf_kit/code/: index.md  (+7 more)
wiki/concepts/: conformance.md  index.md  path-containment.md  progressive-context.md
wiki/core/: build.md  context.md  index.md  links.md  model.md  parse.md  search.md  validate.md
wiki/guides/: authoring.md
wiki/interfaces/: index.md  okf-cli.md  okf-mcp.md  okf-serve.md
wiki/reference/: tools.md
(+24 files in other folders)
