[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "okf-kit"
version = "0.1.0"
description = "Open Knowledge Format (OKF v0.1): core library, CLI, and MCP server."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "okf-kit" }]
dependencies = [
    "pyyaml>=6.0",
    "mcp>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
]
treesitter = [
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=1.8.1",
]

[project.scripts]
okf = "okf_kit.cli:main"
okf-mcp = "okf_kit.mcp:main"

# The import package `okf_kit` lives under the `okf-kit/` source directory.
[tool.hatch.build.targets.wheel]
packages = ["okf-kit/okf_kit"]

[tool.hatch.build.targets.sdist]
include = ["okf-kit/okf_kit", "okf-kit/tests", "okf-kit/skills", "README.md"]

[tool.pytest.ini_options]
pythonpath = ["okf-kit"]
testpaths = ["okf-kit/tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.per-file-ignores]
# Test fixtures carry long inline Markdown strings.
"okf-kit/tests/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
